--- a/popup.html
+++ b/popup.html
@@ -16,14 +16,14 @@
                 <form>
                     <hr>
                     <!-- Still researching pano to-->
-                    <h5>Magnifier <button class="custom_btn" id="magnify">Magnify <img src="public\magnifying-glass_10275878.png"></button></h5>
+                    <h5><button class="custom_btn" id="magnify">Magnifier <img src="public\magnifying-glass_10275878.png"></button></h5>
 
                     <hr>
                     <!--Fixed-->
-                    <h5>Font Size Changer <button class="custom_btn" id="reset-button" style="text-align: right;">Reset</button></h5>
+                    <h5>Font Size Changer</h5>
                     <label class="adjust-label" for="range-slider">Adjust Font Size: <span id="font-size-display"> 16px</span></label>
                     <input type="range" name="range" id="range-slider" min="12" max="25" step="1">
-                    
+                    <h5><button class="custom_btn" id="reset-button">Reset <img src="public\refresh_2546743.png"></button></h5>
                     <hr>
                     <!--Sa color blind Options, kasama na mismo normal/default-->
                     <h5>Colorblind Options</h5>
