modified:   README.md 	new file:   background.js 	modified:   content.js 	new file:   jquery-3.7.1.min.js 	modified:   magnifier.js 	new file:   magnifying-glass.js 	modified:   manifest.json 	modified:   popup.html 	new file:   popup.js 	modified:   styles.css 	deleted:    background.js 	deleted:    magnifier.js 	deleted:    magnifying-glass.js

--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,4 @@
 <!--Content ng extension kapag diwonloads-->
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -16,8 +15,8 @@
                 <form>
                     <hr>
                     <!-- Still researching pano to-->
-                    <h5><button class="custom_btn" id="magnify">Magnifier <img src="public\magnifying-glass_10275878.png"></button></h5>
-
+                    <h5><button class="custom_btn" id="startMagnifier">Magnifier <img src="public\magnifying-glass_10275878.png"></button></h5>
+                    <h5><button class="custom_btn" id="closeMagnifier">Close Magnifier</button></h5>
                     <hr>
                     <!--Fixed-->
                     <h5>Font Size Changer</h5>
@@ -45,8 +44,9 @@
                     </div>
                 </form>
             </div>
+            <script src="jquery-3.7.1.min.js"></script>
         <script src="colorblind_opt.js"></script>
         <script src="font_size.js"></script>
-        <script src="magnifier.js"></script>
+        <script src="popup.js"></script>
     </body>
 </html>
