--- a/popup.html
+++ b/popup.html
@@ -15,8 +15,8 @@
                 <form>
                     <hr>
                     <!-- Still researching pano to-->
-                    <h5><button class="custom_btn" id="startMagnifier">Magnifier <img src="public\magnifying-glass_10275878.png"></button></h5>
-                    <h5><button class="custom_btn" id="closeMagnifier">Close Magnifier</button></h5>
+                    <h5><button class="custom_btn" id="startMagnifier">Magnifier <img src="public\magnifying-glass_10275878.png"></button>
+                        <button class="custom_btn" id="closeMagnifier">Close Magnifier</button></h5>
                     <hr>
                     <!--Fixed-->
                     <h5>Font Size Changer</h5>
