modified:   content.js 	modified:   manifest.json 	modified:   popup.html 	modified:   popup.js 	modified:   public/assets/SS_icon_lg.png 	modified:   public/assets/SS_icon_md.png 	modified:   public/assets/SS_icon_sm.png 	modified:   styles.css

--- a/popup.html
+++ b/popup.html
@@ -10,15 +10,15 @@
             <!--Sa Accessibility features for extension, TESTING!-->
             <div>
                 <div>
-                    <h3>SoundSend <span class="custom_title">Accessibility Modes</span><img src="public\assets\SS_icon_sm.png"></h3>
+                    <h3>EyeDaptify <span class="custom_title">Accessibility Modes</span><img src="public\assets\SS_icon_sm.png"></h3>
                 </div>
                 <form>
                     <hr>
-                    <!-- Still researching pano to-->
+                    <!-- Magnifier button-->
                     <h5><button class="custom_btn" id="startMagnifier">Magnifier <img src="public\magnifying-glass_10275878.png"></button>
                         <button class="custom_btn" id="closeMagnifier">Close Magnifier</button></h5>
                     <hr>
-                    <!--Fixed-->
+                    <!--Font size changer slider-->
                     <h5>Font Size Changer</h5>
                     <label class="adjust-label" for="range-slider">Adjust Font Size: <span id="font-size-display"> 16px</span></label>
                     <input type="range" name="range" id="range-slider" min="12" max="25" step="1">
